[package]
name = "perps_v1"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
argon2 = { version = "0.5", features = ["password-hash"] }
rand_core = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
tokio = "1.52.3"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
jwt = "0.16.0"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
queues = "1.0.2"
chrono = "0.4.44"
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"]}
futures-util = "0.3.32"
serde_json = "1.0.149"
dotenv = "0.15.0"
